background-size: cover fixes resizing window showing whitespace

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,16 +15,19 @@
   .App {
     background-image: url('../../images/backgrounds/mbl_background-360x640.png');
     background-repeat: no-repeat;
-    background-size: 100%;
+    /* background-size: 100%; */
     background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
   }
 }
 @media screen and (min-width: 481px) {
   .App {
     background-image: url('../../images/backgrounds/dsktp_background-1280x720.png');
     background-repeat: no-repeat;
-    background-size: 100%;
     background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
   }
 }
 
